# tj

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  env.template  pyproject.toml
docs/: PLAN.md
planner/: admin.py  agents.py  documents.py  forms.py  map.py  mocks.py  models.py  tools.py  urls.py  views.py
planner/migrations/: 0001_initial.py  0002_document_chunk.py
planner/templates/: base.html.tmpl  index.html.tmpl  register.html.tmpl
planner/templates/documents/: new.html.tmpl  processing.html.tmpl
planner/templates/plans/: detail.html.tmpl  list.html.tmpl  new.html.tmpl  processing.html.tmpl
planner/templatetags/: tags.py
tj/: asgi.py  settings.py  urls.py  wsgi.py
